discussion/kv_engine/160292/160292_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Update purge seqno during Magma implicit compaction

Modify MagmaKVStore::compactionCallBack() to update a vbucket's purge
seqno if the we're performing a compaction in the implicit context. To
allow the method be aware that we're in the implicit context set a flat
in the MagmaKVStore::MagmaCompactionCB after we've called
MagmaKVStore::makeCompactionContext().

This patch also adds a test and modifies the set up of
STParamMagmaBucketTest to ensure that magma_checkpoint_every_batch is
set to true so that we can trigger implicit compaction in a unit test.

Change-Id: I230667da1bb9aff202e97ffc84cd51afc572043c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-08-31 13:31:41.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-31 13:45:44.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39236/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(272): error C4573: the usage of "MagmaKVStore::currEngine" requires the compiler to capture "this" but the current default capture mode does not allow it ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39236/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11827/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22: error: "this" cannot be implicitly captured in this context [clang-diagnostic-error]
        auto vbPtr = currEngine->getVBucket(vbid);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:45: error: variable "vbid" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        auto vbPtr = currEngine->getVBucket(vbid);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:231:10: note: "vbid" declared here
    auto vbid = magmakv::getVbid(metaSlice);
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:267:29: note: lambda expression begins here
    auto updatePurgeSeqno = [&seqno, &cbCtx]() -> void {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:278:21: error: variable "vbid" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
                    vbid.to_string());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:231:10: note: "vbid" declared here
    auto vbid = magmakv::getVbid(metaSlice);
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:267:29: note: lambda expression begins here
    auto updatePurgeSeqno = [&seqno, &cbCtx]() -> void {
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11827/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11827/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33417/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33417/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1486/ : FAILURE

Compile error at [2021-08-31T13:35:13.975Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: ?this? was not captured for this lambda function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1486/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1470/ : FAILURE

Compile error at [2021-08-31T13:33:32.983Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1470/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13671/ : FAILURE

Compile error at [2021-08-31T13:34:02.622Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: ?this? was not captured for this lambda function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13671/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14090/ : FAILURE

Compile error at [2021-08-31T13:33:25.216Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14090/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12584/ : FAILURE

Compile error at [2021-08-31T13:34:39.636Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12584/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21601/ : FAILURE

Compile error at [2021-08-31T13:33:40.549Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:272:22:
error: "this" cannot be implicitly captured in this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21601/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10610/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13438/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
